@@ -26,8 +26,8 @@ $_SESSION['oups']['Auth-Mode'] = isset($_SESSION['oups']['Auth-Mode']) ? $_SESSI
 $_SESSION['oups']['week'] = isset($_SESSION['oups']['week']) ? $_SESSION['oups']['week'] : '';
 
 // Version
-$version="21.04.00.000"; // xx.xx.xx.xxx
-$displayed_version="21.04.00"; // xx.xx.xx
+$version="21.05.00.001"; // xx.xx.xx.xxx
+$displayed_version="21.05.00"; // xx.xx.xx
 require_once __DIR__.'/../vendor/autoload.php';
 
 use Symfony\Component\HttpFoundation\Request;
